# coding-examples

./: .gitignore  README.md
IoT-Kafka-DB-Promet-Grafana/01-IoT-MySQL-Kafka-Promet-Grafana/: README.md
IoT-Kafka-DB-Promet-Grafana/02-IoT-Kafka-DB-Promet-Grafana/: README.md  docker-compose.yml
IoT-Kafka-DB-Promet-Grafana/03-IoT-Kafka-DB-Spark-Promet-Grafana/: README.md  docker-compose.yml
IoT-Kafka-DB-Spark-Promet-Grafana/: README.md
IoT-Kafka-DB-Spark-Promet-Grafana/01-IoT-MySQL-Kafka-Promet-Grafana/: docker-compose.yml
IoT-Kafka-DB-Spark-Promet-Grafana/02-IoT-Kafka-DB-Promet-Grafana/: README.md
Kafka-Elasticsearch-Kibana/: README.md  connector.json  docker-compose.yml  producer.py
ai-machine-learning/ai-agent-pydantic-ai/: README.md  requirements.txt
ai-machine-learning/ai-agent-pydanticai-function-calling/: llm_agent.ipynb  requirements.txt
ai-machine-learning/ai-agentic-rag/: .env.example  README.md  pyproject.toml
ai-machine-learning/ai-agentic-rag/notebooks/: 00-embedding-demo.ipynb  02_agentic_rag.ipynb
ai-machine-learning/ai-azure-openai/: .env.example  pyproject.toml
ai-machine-learning/ai-idps-aws-bedrock/: README.md  app.py  requirements.txt
ai-machine-learning/ai-langgraf-openai-tavily/: .env.example  README.md  main.py  pyproject.toml
ai-machine-learning/ai-local-agent/: README.md
ai-machine-learning/ai-local-text-chat/: README.md
ai-machine-learning/ai-local-text-chat-with-ollama/: langchain_llm.py
ai-machine-learning/ai-local-text-chat-with-travily/: agent_offline.py
ai-machine-learning/ai-local-voice-agent/: README.md
ai-machine-learning/ai-local-voice-agent/polish-version/: README.md  pyproject.toml
ai-machine-learning/ai-multi-pdf-rag/: README.md  pyproject.toml
ai-machine-learning/ai-my-cloned-voice-chat/: asr_local.py  audio_io.py  recorder_16khz_mono.py  requirements.txt
ai-machine-learning/ai-rag-gcp-vertex-ai/: README.md
ai-machine-learning/ai-rag-with-nvidia/: README.md
ai-machine-learning/ann-deep-learning-with-mlflow/: README.md  main.py
ai-machine-learning/chatterbox-tts-model/: README.md  (+5 more)
ai-machine-learning/rag-ai-memory-agent/: README.md  app.py  pyproject.toml
ai-machine-learning/rag-local-langchain-huggingface/: README.md  app.py  config.py  ingest.py  pyproject.toml  sample.py  sample.txt
argocd/: README.md  application.yaml
bash-ec2-and-deploy-website/: README.md  clean.sh  run.sh  user-data.sh
cicd-ec2-ecr-terraform/: README.md
devsecops-deployment-project/: README.md
gcp-bigquery-tf/: README.md  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
github-actions/: build-docker-image-for-gcp.yaml  cicd-k8s.yml  minor-release.yml  ml-ci-cd.yaml  patch-release.yml
gitops-project/: README.md
kafka-elasticsearch-kibana-datadog/: .env.example  README.md  docker-compose.yml
rabbitmq/: README.md  docker-compose.yml
rabbitmq-example/: README.md  receive.py  send.py
terraform-ec2-rds-db-migration/: README.md
terraform-ec2-with-jenkins-docker-ci/: terraform.tfvars
terraform-java-app-deploy-on-eks/: README.md
terraform-jenkins-eks-github/: Jenkinsfile  README.md
terraform-vpc-lb-github-actions/: README.md
tf-aws-postgres-prometheus-grafana/: app.ipynb
tf-ec2-rds-docker-deploy-wordpress/: README.md
vault-examples/: README.md
websockets-aws-tf/: README.md
(+665 files in other folders)
