[project]
name = "rag-demo"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.7",
    "faiss-cpu>=1.13.1",
    "ipykernel>=7.1.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.2",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.4",
    "langgraph>=1.0.5",
    "pymupdf>=1.26.7",
    "pypdf>=6.4.2",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "typesense>=1.3.0",
]

[tool.uv.workspace]
members = [
    "tmp",
    "notebook/tmp",
]
