[project]
name = "ai-memory-agent"
version = "0.1.0"
description = "AI Memory-Enabled Assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.5",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.22",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.3",
    "streamlit>=1.55.0",
]
