[project]
name = "01-dt"
version = "0.1.0"
description = "Local RAG demo – PDF Q&A with HuggingFace & Streamlit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web UI
    "streamlit>=1.56.0",

    # LLM + RAG
    "langchain==0.3.25",
    "langchain-community==0.3.23",
    "langchain-huggingface==0.1.2",
    "langchain-text-splitters==0.3.11",

    # Transformers and Embeddings
    "transformers==4.44.0",
    "torch>=2.11.0",
    "sentence-transformers>=5.3.0",

    # Vector Store
    "faiss-cpu>=1.13.2",

    # PDF Processing
    "pymupdf>=1.27.2.2",

    # Utilities
    "fpdf>=1.7.2",
]
